# VirtaCoinProject

./: COPYING  Get a VirtaCoin Wallet  INSTALL  Makefile.am  README.md  configure.ac  virtapay
contrib/: README.md  qt_translations.py  tidy_datadir.sh  virtacoin-qt.pro  virtacoind.bash-completion
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  rules  virtacoin-qt.desktop  virtacoin-qt.install  virtacoin-qt.lintian-overrides  virtacoin-qt.protocol  virtacoind.bash-completion  virtacoind.examples  virtacoind.install  virtacoind.lintian-overrides  virtacoind.manpages  watch
contrib/debian/examples/: virtacoin.conf
contrib/debian/manpages/: virtacoin-qt.1  virtacoin.conf.5  virtacoind.1
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  README.osx  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-virtacoin.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus  notes.txt
contrib/pyminer/: README  README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
contrib/wallettools/: walletchangepass.py  walletunlock.py
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.7.1.md
qa/pull-tester/: build-tests.sh  build-tests.sh.in  pull-tester.py  pull-tester.sh  run-virtacoind-for-test.sh  run-virtacoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: virtacoin128.xpm  virtacoin16.xpm  virtacoin256.xpm  virtacoin32.xpm  virtacoin64.xpm
share/qt/: Info.plist  Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  miner.cpp  (+51 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: virtacoin_find_bdb48.m4  virtacoin_qt.m4  virtacoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.pb.cc  paymentrequest.proto  (+59 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: virtacoin_ach.ts  virtacoin_af_ZA.qm  virtacoin_af_ZA.ts  virtacoin_ar.qm  virtacoin_ar.ts  virtacoin_be_BY.qm  virtacoin_be_BY.ts  virtacoin_bg.qm  virtacoin_bg.ts  virtacoin_bs.qm  virtacoin_bs.ts  virtacoin_ca.qm  virtacoin_ca.ts  virtacoin_ca@valencia.ts  virtacoin_ca_ES.qm  virtacoin_ca_ES.ts  virtacoin_cmn.ts  virtacoin_cs.qm  virtacoin_cs.ts  virtacoin_cy.qm  virtacoin_cy.ts  virtacoin_da.qm  virtacoin_da.ts  virtacoin_de.qm  virtacoin_de.ts  virtacoin_de_AT.qm  virtacoin_de_AT.ts  virtacoin_el_GR.qm  virtacoin_el_GR.ts  virtacoin_en.qm  virtacoin_en.ts  virtacoin_eo.qm  virtacoin_eo.ts  virtacoin_es.qm  virtacoin_es.ts  virtacoin_es_CL.qm  virtacoin_es_CL.ts  virtacoin_es_DO.qm  virtacoin_es_DO.ts  virtacoin_es_MX.qm  (+91 more)
src/qt/res/: virtacoin-qt-res.rc
src/qt/res/icons/: virtacoin.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/qt/test/.deps/: test_virtacoin_qt-moc_paymentservertests.Po  test_virtacoin_qt-moc_uritests.Po  test_virtacoin_qt-paymentservertests.Po  test_virtacoin_qt-test_main.Po  test_virtacoin_qt-uritests.Po
src/test/: DoS_tests.cpp  Makefile.am  Makefile.in  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_virtacoin.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: tx_valid.json
